--- a/style.css
+++ b/style.css
@@ -4,33 +4,37 @@
     font-family: sans-serif;
 }
 
-/*  font-family: system-ui; */
-
-
-
 :root{
-  
-    --dark1: #0c042c; /* invariato */
-    --dark2: #0c214b; /* invariato */
-    --light1: #c3ccd4; /* invariato */
-    --neutral-gray: #b0b8c1; /* Nuovo colore neutro per bilanciare */
-    
-    --contrast-color: #3a255d; /* invariato */
-    --contrast-color-shadow: #3b255d2c; /* invariato */
-    --contrast-color2: #6a2dcc; /* invariato */
-    --positive-color: #2ac670; /* Aggiunto per segnali di successo/progressi */
-            
-    --tittle1: whitesmoke; /* invariato */
-    --tittle2: #2ac4dd; /* invariato */
+    --dark1: #0c042c; 
+    --dark2: #0c214b; 
+    --light1: #c3ccd4; 
 
+    --neutral-gray: #b0b8c1;
+    --neutral-bg-color: rgba(176, 184, 193, 0.2);
+    --neutral-bg-color-contrast: rgba(124, 81, 149, 0.2); 
+    
+    --contrast-color: #3a255d;
+    --contrast-color-shadow: #3b255d2c; 
+    --contrast-color2: #6a2dcc; 
+    --positive-color: #2ac670; 
+            
+    --tittle1: whitesmoke; 
+    --tittle2: #2ac4dd; 
 }
 
+* h3{
+    font-family: system-ui; 
+    font-size: 30px;
+    font-weight: bold;
+    font-variant: var(--tittle2);
+    text-align: center;
+    letter-spacing: 1px;
+}
 p{
     color: var(--tittle1);
     letter-spacing: 1px;
     line-height: 1.5rem;
 }
-
 body{
     overflow-x: hidden;
     position: relative;
@@ -49,6 +53,7 @@ body{
     left: 0;
     background: linear-gradient(to right, var(--dark2), var(--contrast-color), var(--dark2));
 }
+
 
 /* Home img container */
 .Home__img-container{
@@ -69,6 +74,7 @@ body{
     top: 50%;
     left: 50%;
     transform: translate(-50%,-50%);
+
 }
 .Home__subtitle-container img{
     width: 70%;
@@ -78,14 +84,12 @@ body{
     opacity: 1;
 }
 .Home__subtitle-container h3{
+    font-weight: 400;
     width: 70%;
+    height: 20%;
     margin-left: 50%;
-    text-align: center;
-    transform: translate(-50%, -20%);
-    color: whitesmoke;
-    font-size: 20px;
-    letter-spacing: -0.05em;
-    font-weight: 300;
+    transform: translate(-50%, -30%);
+    color: var(--tittle1);
 }
 .button-container{
     height: 6rem;
@@ -95,15 +99,16 @@ body{
     display: flex;
     justify-content: center;
     align-items: center;
+    transform: translate(0%, -40%);
     gap: 10px;
 }
+
 
 
 
 /* Home content container style */
 
 /* Intro */
-
 .Home-content-container{
     background: linear-gradient(to right, var(--dark2), var(--contrast-color), var(--dark2));
 }
@@ -127,7 +132,13 @@ body{
     text-align: center;
 }
 .Home-content-container-piattaforma{
-    margin: 4rem auto;
+    margin: 6rem auto;
+}
+.funzionalità{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: flex-end;
 }
 .piattaforma-description h5{
     color: var(--neutral-gray);
@@ -143,6 +154,7 @@ body{
     color: var(--tittle2);
     font-size: 35px;
     font-weight: bold;
+    text-align: left;
 }
 .piattaforma-description p{
     margin-top: 1rem;
@@ -194,7 +206,6 @@ body{
 
 /* Demo */
 .home-content-demo{
-/*     background-color: rgba(106, 45, 204, 0.5); */
     background-color: rgba(124, 81, 149, 0.2); 
     margin-top: 2rem;
 }
@@ -223,7 +234,6 @@ body{
     width: 24rem;
     padding: 8px;
 }
-
 
 
 
@@ -283,6 +293,7 @@ body{
 
 
 
+
 /* Domande */
 .faq-container{
     margin: auto;
@@ -324,8 +335,6 @@ body{
     border: none;
     color: var(--tittle1);
 }
-
-
 .accordion-body{
     color: var(--tittle1);
 }
@@ -333,27 +342,104 @@ body{
 
 
 
+
+
+
+
+
+
+
+/* Footer */
 footer{
-    background-color: black;
-    height: 20rem;
+    background-color: rgba(0,0,0,0.8);
+    height: 34rem;
+}
+.footer-header{
+    height: 30rem;
+}
+.logo-container img{
+    width: 300px;
+    height: auto;
+}
+.social-container{
+    margin-top: -1rem;
+    margin-left: 0.5rem;
+}
+.widget-link h3,
+.widget-contatti h3{
+    text-align: left;
+    padding: 10px;
+    color: var(--contrast-color2);
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-weight: bold;
+    position: relative;
+}
+.widget-link h3::before,
+.widget-contatti h3::before{
+    content: '';
+    position: absolute;
+    top: 100%;
+    left: 1rem;
+    width: 5rem;
+    height: 3px;
+    background-color: var(--contrast-color2);
+}
+.widget-link ul li,
+.widget-contatti ul li{
+    margin-top: 1rem;
+    margin-left: -1.5rem;
+    list-style: none;
+    padding: 5px;
+}
+.widget-link ul li a{
+    text-decoration: none;
+    color: var(--tittle1);
+    letter-spacing: 1px;
+}
+.widget-link ul li a:hover{
+    color: var(--contrast-color2);
+}
+.widget-contatti li{
+    color: var(--tittle1);
+    display: flex;
+    gap: 10px;
+    letter-spacing: 1px;
+}
+.widget-contatti li p{
+    padding: 5px;
 }
 
 
 
+.footer-copryright{
+    background-color: var(--dark1);
+    height: 4rem;
+}
 
-
-
-
-
-
-
-
-
-
-
-
-
-
+.footer-copryright p{
+    padding-top: 8px;
+    margin-left: 4rem;
+    width: 30rem;
+    height: 100%;
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+}
+.link-copyright{
+    width: 20rem;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 10px;
+    height: 100%;
+    margin-right: 10rem;
+}
+.link-copyright a{
+    color: var(--tittle1);
+}
+.link-copyright a:hover{
+    color: var(--contrast-color2);
+}
 
 
 
