--- a/style.css
+++ b/style.css
@@ -348,7 +348,7 @@ body{
 }
 .card-container-news{
     margin: 2rem auto auto auto;
-    height: 45rem;
+    height: 48rem;
     gap: 10px;
 }
 .card-item{
@@ -426,11 +426,6 @@ body{
 .colonna2 .arrow-button{
     padding-top: 0px;
 }
-
-
-
-
-
 #notizie{
     width: 20rem;
     padding: 8px;
@@ -461,7 +456,7 @@ body{
 .faq-container h3{
     text-align: center;
     font-size: 40px;
-    padding: 5px;
+    padding: 4px;
     color: var(--tittle2);
     font-weight: 400;
     margin-bottom: 2rem;
@@ -476,27 +471,44 @@ body{
     width: 18rem;
     padding: 8px;
 }
+
+
+
 .accordion{
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    padding-top: 8px;
+    padding-bottom: 8px;
 }
 #accordion-item{
-    background-color: rgba(176, 184, 193, 0.2);
-    border: none;
+    background-color: var(--neutral-bg-color);
+    border: 1px solid var(--neutral-bg-color);
 }
 #accordion-item h2{
-    background-color: rgba(176, 184, 193, 0.2);
+    background-color: var(--neutral-bg-color-contrast);
     border: none;
-    
 }
 #accordion-item h2 button{
-    background-color: rgba(176, 184, 193, 0.2);
+    background-color: var(--neutral-bg-color);
     border: none;
     color: var(--tittle1);
 }
+.accordion-button:focus {
+    box-shadow: 0 0 0 1px var(--tittle2) !important;
+}
+
+
+/* Nascondi la freccia predefinita di Bootstrap nell'accordion */
+.accordion-button::after {
+    content: none; /* Rimuove la freccia */
+}
+
+
+
 .accordion-body{
+    background-color: var(--contrast-color-shadow);
     color: var(--tittle1);
 }
 
@@ -514,6 +526,10 @@ body{
 footer{
     background-color: rgba(0,0,0,0.8);
     height: 34rem;
+}
+.footer-header-container{
+    padding: 0px 50px 0px 50px;
+    height: 30rem;
 }
 .footer-header{
     height: 30rem;
@@ -569,13 +585,15 @@ footer{
 .widget-contatti li p{
     padding: 5px;
 }
+.widget-contatti ul li p:last-of-type{
+    max-width: 50%;
+}
 .footer-copryright{
     background-color: var(--dark1);
     height: 4rem;
 }
 .footer-copryright p{
-    padding-top: 8px;
-    margin-left: 4rem;
+    padding-top: 15px;
     width: 30rem;
     height: 100%;
     display: flex;
@@ -589,7 +607,6 @@ footer{
     align-items: center;
     gap: 10px;
     height: 100%;
-    margin-right: 10rem;
 }
 .link-copyright a{
     color: var(--tittle1);
